--- a/main.html
+++ b/main.html
@@ -21,15 +21,28 @@
           </div>
           <div class="media-icons">
             <!-- your code here -->
+			  <a href="#">Home</a><br>
+			  <a href="#">About</a><br>
+			  <a href="#">Links</a><br>
+			  <a href="#">Services</a><br>
+			  <a href="#">Contact</a><br>
           </div>
         </div>
+<!-- 		   <span class="logo_name">Page</span> -->
         <div class="link-boxes">
           <!-- your code here -->
+			<a href="#">Homepage</a><br>
+			<a href="#">Aboutpage</a><br>
         </div>
-      </div>
+<!-- 		 <span class="logo_name">Social Media</span> -->
       <div class="bottom-details">
         <!-- your code here -->
+		  <a href="#">Twitter</a><br>
+		  <a href="#">Linkedin</a><br>
+		  <a href="#">Facebook</a><br>
+		  <a href="#">Instagram</a><br>
       </div>
+	</div>
     </footer>
   </body>
 </html>
