--- a/main.html
+++ b/main.html
@@ -31,11 +31,31 @@
 <!-- 		   <span class="logo_name">Page</span> -->
         <div class="link-boxes">
           <!-- your code here -->
+		<div>
+			<a href="#">About</a><br>
+             <a href="#">Hacks Blog</a><br>
+             <a href="#">Careers</a><br>
+            <a href="#">Advertise with us</a><br>
+		</div>
+			<div>
+				<a href="#">programme</a><br>
+				<a href="#">Classes</a><br>
+				<a href="#">Tests</a><br>
+			</div>
+			<div>
+				<a href="#">Home page</a><br>
+				<a href="#">Web page</a><br>
+				<a href="#">social media</a><br>
+			</div>
+		 <div>
 		 <a href="#">Twitter</a><br>
 		  <a href="#">Linkedin</a><br>
 		  <a href="#">Facebook</a><br>
 		  <a href="#">Instagram</a><br>
         </div>
+			<div>
+				<p>8879887262</p>
+			</div>
 <!-- 		 <span class="logo_name">Social Media</span> -->
       <div class="bottom-details">
         <!-- your code here -->
